#
# This file is part of KDDockWidgets.
#
# SPDX-FileCopyrightText: 2020-2023 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# Author: Sergio Martins <sergio.martins@kdab.com>
#
# SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only
#
# Contact KDAB at <info@kdab.com> for commercial licensing options.
#

add_subdirectory(dockwidgets)
add_subdirectory(mdi)
add_subdirectory(customtitlebar)
add_subdirectory(customtabbar)
add_subdirectory(customseparator)

# uncomment once mouse bugs are fixed
# add_subdirectory(mdi_with_docking)
